--- a/index.css
+++ b/index.css
@@ -1,9 +1,16 @@
-p{
-    text-align: center;
-    font-size: 120px;
-    font-family: Arial;
-    margin-top: 38vh;
+/* General Styles */
+body {
+    margin: 0;
+    font-family: Arial, sans-serif;
+    background-color: black;
+    color: white;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
 }
+
 /* Navigation Bar */
 nav {
     position: absolute;
